--- a/ldazc.css
+++ b/ldazc.css
@@ -1,7 +1,7 @@
 /* Variabes */
 /* Mixin's */
 body {
-  background: #c1d72e;
+  background: #ff4d4d;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   color: #fff;
   height: 100%;
@@ -29,7 +29,8 @@ h1, h2, h3 {
   font-family: 'Roboto', sans-serif;
   font-weight: 100;
   text-transform: uppercase;
-  margin: 5px 0;
+  margin: 0px 0;
+  padding-bottom: -5px;
 }
 
 h1 {
@@ -42,17 +43,21 @@ h2 {
 
 p {
   font-size: 1.6em;
+  margin-bottom: 8px;
+  margin-top: 8px;
 }
 
 #alphabet {
   margin: 15px auto;
   padding: 0;
   max-width: 900px;
+  position:center;
 }
 #alphabet:after {
   content: "";
   display: table;
   clear: both;
+  align-items: center;
 }
 
 #alphabet li {
@@ -63,7 +68,7 @@ p {
   height: 30px;
   padding-top: 10px;
   background: #fff;
-  color: #c1d72e;
+  color: #ff4d4d;
   cursor: pointer;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
@@ -72,7 +77,7 @@ p {
   border: solid 1px #fff;
 }
 #alphabet li:hover {
-  background: #c1d72e;
+  background: #ff4d4d;
   border: solid 1px #fff;
   color: #fff;
 }
@@ -123,7 +128,7 @@ button {
   -webkit-border-radius: 5px;
   border-radius: 5px;
   -khtml-border-radius: 5px;
-  background: #c1d72e;
+  background: #ff4d4d;
   color: #fff;
   border: solid 1px #fff;
   text-decoration: none;
@@ -134,13 +139,19 @@ button {
   margin: 10px;
   outline: none;
 }
+
+button.selected{
+  background: #fff;
+  border: solid 1px #fff;
+  color: #ff4d4d;
+}
 button:hover {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
   background: #fff;
   border: solid 1px #fff;
-  color: #c1d72e;
+  color: #ff4d4d;
 }
 
 @media (max-width: 767px) {
@@ -151,5 +162,13 @@ button:hover {
 @media (max-width: 480px) {
   #alphabet {
     padding: 0 0 0 25px;
+  }
+
+  #subtitle p{
+    font-size:1em;
+  }
+
+  a {
+    color: #fff;
   }
 }
